--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "lint:fix": "eslint ./app --fix"
   },
   "dependencies": {
-    "@ant-design/cssinjs": "^1.13.2",
-    "@headlessui/react": "^1.7.15",
+    "@ant-design/cssinjs": "^1.16.1",
+    "@headlessui/react": "^1.7.16",
     "@headlessui/tailwindcss": "^0.1.3",
     "@iconscout/react-unicons": "^2.0.2",
+    "@nextui-org/react": "^2.0.15",
     "@observablehq/runtime": "^5.8.2",
     "@t3-oss/env-nextjs": "^0.6.0",
     "@tailwindcss/typography": "^0.5.9",
@@ -24,28 +25,30 @@
     "@types/react-dom": "18.2.6",
     "@vercel/analytics": "^1.0.1",
     "a99b331307f7eae7": "https://api.observablehq.com/d/a99b331307f7eae7.tgz?v=3",
-    "antd": "^5.7.2",
+    "antd": "^5.8.2",
     "autoprefixer": "^10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "feather-icons": "^4.29.0",
-    "framer-motion": "^10.12.18",
+    "framer-motion": "^10.15.0",
+    "graphql-request": "^6.1.0",
     "next": "13.4.8",
     "next-themes": "^0.2.1",
     "openai": "^3.3.0",
-    "postcss": "^8.4.24",
+    "postcss": "^8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "sharp": "^0.32.1",
-    "tailwindcss": "^3.3.2",
+    "sharp": "^0.32.4",
+    "styled-components": "^6.0.7",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.1.6",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^5.61.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
-    "prettier": "^3.0.0",
+    "prettier": "^3.0.1",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "recommended@latest": "link:eslint-plugin-tailwindcss/recommended@latest"
   }
