--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
       "@/components/*": ["components/*"],
       "@/pages/*": ["pages/*"],
       "@/lib/*": ["lib/*"],
+      "@/services/*": ["services/*"],
       "@/styles/*": ["styles/*"],
       "@/data/*": ["data/*"]
     },
